--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -37,3 +37,5 @@ jobs:
 
       - name: Run Tests
         run: make test GO_VERSION=${{ matrix.go-version }}
+      - name: log
+        run: docker logs -f pulsar-client-go-test
