--- a/integration-tests/conf/standalone.conf
+++ b/integration-tests/conf/standalone.conf
@@ -106,7 +106,7 @@ tokenSecretKey=file:///pulsar/tokens/secret.key
 
 # Role names that are treated as "super-user", meaning they will be able to do all admin
 # operations and publish/consume from all topics
-superUserRoles=localhost,superUser,admin
+superUserRoles=localhost,superUser,admin,anonymous
 
 # Authentication settings of the broker itself. Used when the broker connects to other brokers,
 # either in same or other clusters
